# DBR

./: .example_env  .gitignore  LICENSE  README.md  gui.py  pyproject.toml  requirements.txt
modules/: remover.py
src/dbr/: __main__.py
src/dbr/modules/: badge_spam_list.py  bor_database_handler.py  data_save.py  download.py  get_request_url.py  metagamerscore.py  remover.py  spam_scanner.py
